[gd_scene load_steps=5 format=3 uid="uid://b6mppdtwfmrgd"]

[ext_resource type="Script" uid="uid://d03dwp54e4gy0" path="res://levels/main.gd" id="1_l3rg6"]
[ext_resource type="Environment" uid="uid://bklfqfi8vxoon" path="res://levels/environment.tres" id="2_m1504"]
[ext_resource type="PackedScene" uid="uid://cdr748hqkaljw" path="res://gui/right_panel.tscn" id="3_i0pbo"]
[ext_resource type="PackedScene" uid="uid://2pf2a0s6rm3r" path="res://gui/left_panel.tscn" id="4_e16ue"]

[node name="MainGame" type="Node3D"]
script = ExtResource("1_l3rg6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_m1504")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.423822, -0.276941, -0.862368, 0.277341, -0.866695, 0.414634, -0.862239, -0.414901, -0.290517, 11.0084, 12.3453, -31.3148)
light_energy = 0.5
light_indirect_energy = 0.5
shadow_enabled = true
shadow_bias = 0.015
shadow_blur = 1.5
directional_shadow_mode = 0
directional_shadow_max_distance = 80.0

[node name="Cars" type="Node" parent="."]

[node name="CameraBase" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 10)

[node name="Camera3D" type="Camera3D" parent="CameraBase"]
transform = Transform3D(1, 0, 0, 0, 0.516533, 0.856267, 0, -0.856267, 0.516533, 0, 26.4679, 8.50163)
cull_mask = 1048573
fov = 74.0
near = 0.1

[node name="AudioListener3D" type="AudioListener3D" parent="CameraBase/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.516533, -0.856267, 0, 0.856267, 0.516533, 0, 0, 0)
current = true

[node name="RightPanel" parent="." instance=ExtResource("3_i0pbo")]

[node name="LeftPanel" parent="." instance=ExtResource("4_e16ue")]
